# websites

./: .env.example  .ghci  .ghcid  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  STRUCTURE.md  TODO.md  bootstrap  build.sh  cabal.project  cabal.project.freeze  default-aarch64.nix  default-ghc92-new.nix  default-ghc92.nix  default-nix.nix  default.nix  deploy.sh  draft-being-enby-doesnt-make-me-special.md  init.sql  lintall.sh  node-packages.nix  old-default.nix  package-lock.json  package.json  pushall.sh  serve.sh  serverless.md  serverless.yml  shell-musl.nix  shell.nix  sort-posts.sh  stack.yaml  stack.yml  test.sh  (+3 more)
.github/workflows/: deploy.yml  haskell-release-dev.yml  haskell-release-dev.yml.disabled  haskell-release-nightly.yml  haskell-release-nightly.yml.disabled  haskell-release-prod.yml  haskell-release-prod.yml.disabled  main.yml  nix.yml.disabled
bench/: Main.hs
lib/: Build.hs  Make.hs  Serve.hs
lib/Blog/: Comment.hs  Feed.hs  Link.hs  Post.hs
lib/CSS/: Blog.hs  Common.hs  DanDart.hs  JolHarg.hs  M0ORI.hs  MadHacker.hs
lib/Data/: Env.hs
lib/Site/: Blog.hs  Build.hs  DanDart.hs  JolHarg.hs  M0ORI.hs  Markdowns.hs
lib/Util/: Build.hs
posts/: 2008-09-25-sun-is-dead?.md  2009-07-15-what-free-software-needs.md  2009-08-19-how-to-conquer-the-desktop.md  2009-09-12-a-*-for-that.md  2009-09-20-linux-myths-debunked.md  2010-02-08-features-id-like-to-see-in-sauerbraten.md  2010-11-13-how-to-use-ssh-for-internet-connection.md  2012-05-20-rules-of-website-advertising.md  2016-08-29-you-dont-need-the-command-line.md  2016-09-16-project-chaplin-031-released.md  2016-09-17-building-single-page-applications-and-more-for-modern-javascript.md  2016-10-21-using-digital-modes-on-a-ham-radio-cheaply.md  2016-10-29-answers-to-the-big-questions-2.md  2016-11-22-rpn-&-stack-arithmetic.md  2018-07-06-redrawing-and-scrolling-problems.md  2018-07-10-human-language-vs-computer-language.md  2018-07-10-human-rights-an-upgrade.md  2018-07-10-i-was-sent-some-spam-what-was-attached-was-hilarious.md  2018-07-10-interesting-programmes-for-ham-radio.md  2018-07-10-my-take-on-discordianism-subgenius-pastafarianism-etc.md  2018-07-10-the-rules-of-website-advertising-2-a-follow-up.md  2018-07-11-no-youre-wrong-especially-if-youre-an-american.md  2018-07-12-a-history-of-bugs-youtube.md  2018-07-12-automatically-reporting-ham-radio-contacts-to-internet-services.md  2018-07-12-dealing-with-mental-health.md  2018-07-12-how-to-pronounce-british-place-names.md  2018-07-12-how-to-run-a-country-my-laws.md  2018-07-12-windows-is-not-ready-for-the-desktop.md  2018-07-14-brand-loyalty.md  2018-07-16--coincidences-theyre-not-that-weird.md  2018-07-16--stop-the-hate.md  2018-07-16-being-heard-and-language.md  2018-07-16-fabulous-white-haired-guys-in-japanese-media-who-talk-about-hope-and-love-on-the-main-character.md  2018-07-16-how-i-made-my-website.md  2018-07-16-how-i-make-blog-posts.md  2018-07-16-how-to-release-an-open-source-project.md  2018-07-16-my-javascript-is-free.md  2018-07-16-privacy-relevance-and-being-trapped-in-bubbles.md  2018-07-16-the-solution-to-clickbait-put-answer-in.md  2018-07-16-which-politicians-or-parties-to-support?.md  (+97 more)
posts/algebra-is-not-hard/: 2021-03-27T19:11:53.295353435Z.md  comments.md
posts/always-use-utc/: 2020-12-07T22:28:59.0190526Z.md  2020-12-08T08:10:16.548971688Z.md  2020-12-08T08:53:35.297266185Z.md  2020-12-09T06:23:53.853162215Z.md  2020-12-09T20:15:36.25419452Z.md  2020-12-09T20:36:24.456844661Z.md  2020-12-09T21:01:03.966508226Z.md  2020-12-09T21:21:45.771878111Z.md  2020-12-10T00:03:08.031165324Z.md  2020-12-12T12:25:25.568207224Z.md  2020-12-13T09:07:34.004393161Z.md  2020-12-13T10:07:46.478418945Z.md  2020-12-13T21:03:56.052377376Z.md  2020-12-14T09:52:44.845504926Z.md  2020-12-14T20:45:41.907811037Z.md  2020-12-15T16:03:17.717093599Z.md  2020-12-15T21:28:00.677458897Z.md  2020-12-24T02:58:32.13783702Z.md  2021-01-05T12:50:23.27423075Z.md  2021-01-05T13:19:35.337902311Z.md  2021-02-26T00:40:26.601446409Z.md  2021-02-26T01:00:00.774677229Z.md  2021-03-07T15:10:52.801310511Z.md  2021-03-10T06:30:21.728587699Z.md  2021-03-10T06:35:05.823450851Z.md  2021-03-10T06:39:32.610878227Z.md  2021-03-10T06:43:55.248404096Z.md  2021-03-10T11:24:02.513567997Z.md  2021-03-10T11:28:06.723410907Z.md  2021-03-10T11:32:04.212716215Z.md  2021-03-10T11:36:00.319865765Z.md  2021-03-10T22:45:43.681139659Z.md  2021-03-10T22:49:47.798124634Z.md  2021-03-10T22:53:22.482223204Z.md  2021-03-10T22:56:59.173451473Z.md  2021-03-12T09:51:00.464358987Z.md  2021-03-12T09:56:34.068449703Z.md  2021-03-12T13:03:04.203965619Z.md  2021-03-12T13:13:33.869203416Z.md  2021-03-12T20:40:01.619999105Z.md  (+29 more)
posts/answers-to-big-questions/: 2021-03-27T19:13:23.096032469Z.md
posts/appropriate-punishments/: 2021-03-27T19:11:21.166761241Z.md
posts/atom-feed-now-available/: 2021-03-27T19:11:11.942443295Z.md
posts/best-security-practices-for-your/: 2021-03-27T19:13:06.663852728Z.md
posts/bibud-alpha-51-released/: 2021-03-27T19:12:49.918522888Z.md
posts/bibud-social-web-desktop-alpha5/: 2021-03-27T19:12:52.534051102Z.md
posts/blog/: 2009-06-29-answers-to-big-questions.md  2009-08-19-how-to-conquer-desktop.md  2009-09-12-for-that.md  (+58 more)
reviews/: 2009-10-18-reflections-on-ipod-touch.md  draft-hackrf-one-with-portapack.md  draft-windows-11.md  one-month-macbook-pro-13-2020.md  reflections-on-ipod-touch.md
scripts/: build-md.sh  build.sh  deploy-serverless.sh  deploy.sh  lintall.sh  makeTestFiles.sh  pushall.sh  serve-nix.sh  serve.sh  test.sh
sql/: init.sql
src/: Main.hs  add-email-to-newsletter.hs  blog.hs  build-websites.hs  build.hs  contact.hs  dandart.hs  get-subs.hs  jolharg.hs  m0ori.hs  remove-spam.hs  send-newsletter.hs  serve.hs  sort-comments.hs  submit-comment.hs  submit-review-comment.hs  subscribe-email-to-newsletter.hs  track-email-view.hs  unsubscribe-email-from-newsletter.hs  visit-migrate.hs  visit-viewer.hs  visit.hs
src_old/: Main.hs
static/: README.md
test/: Spec.hs  dandart.hs  jolharg.hs  m0ori.hs
(+724 files in other folders)
