cabal-version:       3.4
-- Newer versions complain
name:                websites
version:             0.1.0.0
homepage:            https://github.com/danwdart/websites#readme
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019-2021 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Werror
    -haddock
    -threaded
    -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe

library
  hs-source-dirs:      lib
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Werror
    -haddock
  ghcjs-options:       -dedupe
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  build-depends:
      base >= 4.17.0.0 && < 5
    , aeson
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , dotenv
    , directory
    , extra
    , feed
    , filepath
    , frontmatter
    , fsutils >= 0.1.4
    , mtl
    , pandoc
    , req
    , sitemap-gen
    , text
    , time
  other-modules:
      Build.Blog
    , Build.BlogJolHarg
    , Build.Blogs
    , Build.DanDart
    , Build.JolHarg
    , Build.M0ORI
    , Build.MadHacker
    , Build.Normal
    , Build.Sitemap
    , Control.Exception.InvalidDateException
    , Control.Exception.ParseFileException
    , Data.Site.Blog
    , Data.Site.BlogJolHarg
    , Data.Site.DanDart
    , Data.Site.JolHarg
    , Data.Site.M0ORI
    , Data.Site.MadHacker
    , Data.Time.Utils
    , Html.Blog.Header
    , Html.Blog.Index
    , Html.Blog.Page.Blog
    , Html.BlogJolHarg.Header
    , Html.BlogJolHarg.Index
    , Html.BlogJolHarg.Page.Blog
    , Html.Common.Audio
    , Html.Common.Blog.Comment
    , Html.Common.Blog.Feed
    , Html.Common.Blog.Link
    , Html.Common.Blog.Post
    , Html.Common.Blog.Types
    , Html.Common.Bootstrap
    , Html.Common.CSS
    , Html.Common.Card
    , Html.Common.Contact
    , Html.Common.Error.NotFound
    , Html.Common.GitHub
    , Html.Common.Head
    , Html.Common.Header
    , Html.Common.Icon
    , Html.Common.Link
    , Html.Common.Page
    , Html.Common.Shortcuts
    , Html.Common.Social
    , Html.Common.Utils
    , Html.DanDart.Header
    , Html.DanDart.Index
    , Html.DanDart.Page.About
    , Html.DanDart.Page.Characters
    , Html.DanDart.Page.Contact
    , Html.DanDart.Page.Favourites
    , Html.DanDart.Page.Health
    , Html.DanDart.Page.Intro
    , Html.DanDart.Page.Maths
    , Html.DanDart.Page.Music
    , Html.DanDart.Page.Origami
    , Html.DanDart.Social
    , Html.JolHarg.Header
    , Html.JolHarg.Index
    , Html.JolHarg.Page.Contact
    , Html.JolHarg.Page.FreeSoftware
    , Html.JolHarg.Page.Portfolio
    , Html.M0ORI.Header
    , Html.M0ORI.Index
    , Html.M0ORI.Page.Contact
    , Html.M0ORI.Page.HamRadio
    , Html.MadHacker.Header
    , Html.MadHacker.Index
    , Html.MadHacker.Page.Reviews
    , Html.MadHacker.Suffix
    , Make
  exposed-modules:
      Build
    , Data.Env
    , Data.Env.Types

executable build
  import: shared-properties
  hs-source-dirs:      src
  main-is:             build.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  build-depends:
      base >= 4.17.0.0 && < 5
    , websites

executable dev
  import: shared-properties
  hs-source-dirs:      src, lib
  main-is:             build.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  other-modules:
      Build.Blog
    , Build.BlogJolHarg
    , Build.Blogs
    , Build.DanDart
    , Build.JolHarg
    , Build.M0ORI
    , Build.MadHacker
    , Build.Normal
    , Build.Sitemap
    , Control.Exception.InvalidDateException
    , Control.Exception.ParseFileException
    , Data.Site.Blog
    , Data.Site.BlogJolHarg
    , Data.Site.DanDart
    , Data.Site.JolHarg
    , Data.Site.M0ORI
    , Data.Site.MadHacker
    , Data.Time.Utils
    , Html.Blog.Header
    , Html.Blog.Index
    , Html.Blog.Page.Blog
    , Html.BlogJolHarg.Header
    , Html.BlogJolHarg.Index
    , Html.BlogJolHarg.Page.Blog
    , Html.Common.Audio
    , Html.Common.Blog.Comment
    , Html.Common.Blog.Feed
    , Html.Common.Blog.Link
    , Html.Common.Blog.Post
    , Html.Common.Blog.Types
    , Html.Common.Bootstrap
    , Html.Common.CSS
    , Html.Common.Card
    , Html.Common.Contact
    , Html.Common.Error.NotFound
    , Html.Common.GitHub
    , Html.Common.Head
    , Html.Common.Header
    , Html.Common.Icon
    , Html.Common.Link
    , Html.Common.Page
    , Html.Common.Shortcuts
    , Html.Common.Social
    , Html.Common.Utils
    , Html.DanDart.Header
    , Html.DanDart.Index
    , Html.DanDart.Page.About
    , Html.DanDart.Page.Characters
    , Html.DanDart.Page.Contact
    , Html.DanDart.Page.Favourites
    , Html.DanDart.Page.Health
    , Html.DanDart.Page.Intro
    , Html.DanDart.Page.Maths
    , Html.DanDart.Page.Music
    , Html.DanDart.Page.Origami
    , Html.DanDart.Social
    , Html.JolHarg.Header
    , Html.JolHarg.Index
    , Html.JolHarg.Page.Contact
    , Html.JolHarg.Page.FreeSoftware
    , Html.JolHarg.Page.Portfolio
    , Html.M0ORI.Header
    , Html.M0ORI.Index
    , Html.M0ORI.Page.Contact
    , Html.M0ORI.Page.HamRadio
    , Html.MadHacker.Header
    , Html.MadHacker.Index
    , Html.MadHacker.Page.Reviews
    , Html.MadHacker.Suffix
    , Make
    , Build
    , Data.Env
    , Data.Env.Types
  build-depends:
      base >= 4.17.0.0 && < 5
    , aeson
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , dotenv
    , directory
    , extra
    , feed
    , filepath
    , frontmatter
    , fsutils >= 0.1.4
    , mtl
    , pandoc
    , req
    , sitemap-gen
    , text
    , time

test-suite websites-test
  import: shared-properties
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       E2E.Site.CommonSpec
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  build-depends:
      base >= 4.17.0.0 && < 5
    -- , aeson
    -- , async
    -- , containers
    -- , hspec
    -- , hspec-core
    -- , hspec-expectations
    -- , http-client
    -- , http-client-tls
    -- , http-types
    -- , process
    -- , QuickCheck
    -- , random
    -- , text
    -- , transformers
    -- , vector
    -- , webdriver
    -- , websites

benchmark websites-bench
  import: shared-properties
  hs-source-dirs:      bench
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  build-depends:
      base >= 4.17.0.0 && < 5
    , criterion
    , websites