cabal-version:      3.12

-- Newer versions complain
name:               websites
version:            0.2.0.0
homepage:           https://github.com/danwdart/websites#readme
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019-2021 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-unsafe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
    -Werror -haddock

  ghcjs-options:      -dedupe

library
  hs-source-dirs:     lib
  ghc-options:
    -Weverything -Wno-unsafe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
    -Werror -haddock

  ghcjs-options:      -dedupe
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , aeson                   ^>=2.2.3.0
    , base                    ^>=4.21.0.0
    , blaze-html              ^>=0.9.2.0
    , blaze-markup            ^>=0.8.3.0
    , bytestring              ^>=0.12.2.0
    , Cabal                   ^>=3.16.0.0
    , containers              ^>=0.8
    , directory               ^>=1.3.9.0
    , email-validate          ^>=2.3.2.21
    , extra                   ^>=1.8
    , feed                    ^>=1.3.2.1
    , filepath                ^>=1.5.4.0
    , frontmatter             ^>=0.1.0.2
    , lens                    ^>=5.3.3
    , mtl                     ^>=2.3.1
    , network-uri             ^>=2.6.4.2
    , nonempty-containers     ^>=0.3.4.5
    , nonempty-wrapper        ^>=0.1.0.0
    , nonempty-wrapper-aeson  ^>=0.1.0.0
    , nonempty-wrapper-text   ^>=0.1.0.0
    , pandoc                  ^>=3.7.0.1
    , req                     ^>=3.13.4
    , sitemap-gen             ^>=0.1.0.0
    , text                    ^>=2.1.2
    , time                    ^>=1.15

  -- , dotenv               ^>=0.12.0.0
  other-modules:
    Build.Blog
    Build.BlogJolHarg
    Build.BlogM0ORI
    Build.Blogs
    Build.DanDart
    Build.JolHarg
    Build.M0ORI
    Build.MadHacker
    Build.Normal
    Build.Sitemap
    Control.Exception.BlogPostException
    Control.Exception.CommentException
    Control.Exception.InvalidDateException
    Control.Exception.MissingAtomURIException
    Control.Exception.MissingPostIdException
    Control.Exception.ParseFileException
    Data.Foldable.Monoid
    Data.Time.Utils
    Html.Blog.Header
    Html.Blog.Index
    Html.Blog.Page.Blog
    Html.BlogJolHarg.Header
    Html.BlogJolHarg.Index
    Html.BlogJolHarg.Page.Blog
    Html.BlogM0ORI.Header
    Html.BlogM0ORI.Index
    Html.BlogM0ORI.Page.Blog
    Html.Common.Audio
    Html.Common.Blog.Comment
    Html.Common.Blog.Feed
    Html.Common.Blog.Link
    Html.Common.Blog.Post
    Html.Common.Blog.Types
    Html.Common.Bootstrap
    Html.Common.Card
    Html.Common.Contact
    Html.Common.CSS
    Html.Common.Error.NotFound
    Html.Common.GitHub
    Html.Common.Head
    Html.Common.Header
    Html.Common.Icon
    Html.Common.Link
    Html.Common.Page
    Html.Common.Shortcuts
    Html.Common.Social
    Html.Common.Utils
    Html.DanDart.Data
    Html.DanDart.Header
    Html.DanDart.Index
    Html.DanDart.Page.About
    Html.DanDart.Page.Characters
    Html.DanDart.Page.Contact
    Html.DanDart.Page.Favourites
    Html.DanDart.Page.Health
    Html.DanDart.Page.Intro
    Html.DanDart.Page.Maths
    Html.DanDart.Page.Music
    Html.DanDart.Page.Origami
    Html.DanDart.Social
    Html.JolHarg.Header
    Html.JolHarg.Index
    Html.JolHarg.Page.Contact
    Html.JolHarg.Page.FreeSoftware
    Html.JolHarg.Page.Portfolio
    Html.M0ORI.Header
    Html.M0ORI.Index
    Html.M0ORI.Page.Contact
    Html.M0ORI.Page.HamRadio
    Html.MadHacker.Header
    Html.MadHacker.Index
    Html.MadHacker.Page.Reviews
    Html.MadHacker.Suffix
    Make

  exposed-modules:
    Build
    Data.Env
    Data.Env.Types

executable build
  import:             shared-properties
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base      ^>=4.21.0.0
    , websites  ^>=0.2.0.0

executable dev
  import:             shared-properties
  ghc-options:        -Wwarn
  hs-source-dirs:     src lib
  main-is:            Main.hs
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  other-modules:
    Build
    Build.Blog
    Build.BlogJolHarg
    Build.BlogM0ORI
    Build.Blogs
    Build.DanDart
    Build.JolHarg
    Build.M0ORI
    Build.MadHacker
    Build.Normal
    Build.Sitemap
    Control.Exception.BlogPostException
    Control.Exception.CommentException
    Control.Exception.InvalidDateException
    Control.Exception.MissingAtomURIException
    Control.Exception.MissingPostIdException
    Control.Exception.ParseFileException
    Data.Env
    Data.Env.Types
    Data.Foldable.Monoid
    Data.Time.Utils
    Html.Blog.Header
    Html.Blog.Index
    Html.Blog.Page.Blog
    Html.BlogJolHarg.Header
    Html.BlogJolHarg.Index
    Html.BlogJolHarg.Page.Blog
    Html.BlogM0ORI.Header
    Html.BlogM0ORI.Index
    Html.BlogM0ORI.Page.Blog
    Html.Common.Audio
    Html.Common.Blog.Comment
    Html.Common.Blog.Feed
    Html.Common.Blog.Link
    Html.Common.Blog.Post
    Html.Common.Blog.Types
    Html.Common.Bootstrap
    Html.Common.Card
    Html.Common.Contact
    Html.Common.CSS
    Html.Common.Error.NotFound
    Html.Common.GitHub
    Html.Common.Head
    Html.Common.Header
    Html.Common.Icon
    Html.Common.Link
    Html.Common.Page
    Html.Common.Shortcuts
    Html.Common.Social
    Html.Common.Utils
    Html.DanDart.Data
    Html.DanDart.Header
    Html.DanDart.Index
    Html.DanDart.Page.About
    Html.DanDart.Page.Characters
    Html.DanDart.Page.Contact
    Html.DanDart.Page.Favourites
    Html.DanDart.Page.Health
    Html.DanDart.Page.Intro
    Html.DanDart.Page.Maths
    Html.DanDart.Page.Music
    Html.DanDart.Page.Origami
    Html.DanDart.Page.Talks
    Html.DanDart.Social
    Html.JolHarg.Header
    Html.JolHarg.Index
    Html.JolHarg.Page.Contact
    Html.JolHarg.Page.FreeSoftware
    Html.JolHarg.Page.Portfolio
    Html.M0ORI.Header
    Html.M0ORI.Index
    Html.M0ORI.Page.Contact
    Html.M0ORI.Page.HamRadio
    Html.MadHacker.Header
    Html.MadHacker.Index
    Html.MadHacker.Page.Reviews
    Html.MadHacker.Suffix
    Make

  build-depends:
    , aeson                   ^>=2.2.3.0
    , base                    ^>=4.21.0.0
    , blaze-html              ^>=0.9.2.0
    , blaze-markup            ^>=0.8.3.0
    , bytestring              ^>=0.12.2.0
    , Cabal                   ^>=3.16.0.0
    , containers              ^>=0.8
    , directory               ^>=1.3.9.0
    , email-validate          ^>=2.3.2.21
    , extra                   ^>=1.8
    , feed                    ^>=1.3.2.1
    , filepath                ^>=1.5.4.0
    , frontmatter             ^>=0.1.0.2
    , lens                    ^>=5.3.3
    , mtl                     ^>=2.3.1
    , network-uri             ^>=2.6.4.2
    , nonempty-containers     ^>=0.3.4.5
    , nonempty-wrapper        ^>=0.1.0.0
    , nonempty-wrapper-aeson  ^>=0.1.0.0
    , nonempty-wrapper-text   ^>=0.1.0.0
    , pandoc                  ^>=3.7.0.1
    , req                     ^>=3.13.4
    , sitemap-gen             ^>=0.1.0.0
    , text                    ^>=2.1.2
    , time                    ^>=1.15

-- , dotenv               ^>=0.12.0.0
-- , non-empty-text
test-suite websites-test
  import:             shared-properties

  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      E2E.Site.CommonSpec
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , aeson              ^>=2.2.3.0
    , async              ^>=2.2.5
    , base               ^>=4.21.0.0
    , hspec              ^>=2.11.10
    , http-client        ^>=0.7.18
    , http-client-tls    ^>=0.3.6.4
    , http-types         ^>=0.12.4
    , lens               ^>=5.3.3
    , network-uri        ^>=2.6.4.2
    , nonempty-wrapper   ^>=0.1.0.0
    , text               ^>=2.1.2
    , webdriver          ^>=0.12.0.1
    , webdriver-wrapper  ^>=0.2.0.1
    , websites           ^>=0.2.0.0
    , witherable         ^>=0.5

  -- , containers           ^>=0.8
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  -- , mtl                  ^>=2.3.1
  -- , process ^>=1.6.25.0
  -- , QuickCheck ^>=2.16.0.0
  -- , random ^>=1.3.0
  -- , vector ^>=0.13.2.0
  build-tool-depends: hspec-discover:hspec-discover

benchmark websites-bench
  import:             shared-properties
  hs-source-dirs:     bench
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base       ^>=4.21.0.0
    , criterion  ^>=1.6.4.0
    , websites   ^>=0.2.0.0
